@@ -52,6 +52,7 @@ Version 2.1.4
         reporting this bug)
    - Added John Ellson to contributors
    - Change: Default value of option "mailbox/other_port" is now 0
+   - Feature: Display standard port being used in the properties dialog
 
 Version 2.1.3		2005-04-03 23:57
  * Robert Sowada
